@startuml
'https://plantuml.com/class-diagram
hide circle
skinparam classAttributeIconSize 0
hide methods




class IDPlanCashFlow {
   -planType
   -cashflows
}
class PlanType_CashFlow {
   -month
   -cashflow
   -year
}

class Subscription{
    -id
    -subType
    -date
    -subState
    -feeType
    -cancellations
    -subscriptions
}

class Plan{
    -nMins
    -maxDevices
    -musicCollections
    -musicSuggestions
    -monthlyFee
    -annualFee
    -planState
    -planType
    -HTMLdescription
    -planPromote
   }

IDPlanCashFlow  --> "1" Plan
IDPlanCashFlow  -->  PlanType_CashFlow
Plan "1" --> "*" Subscription



@enduml